AP-25211: code cleanup
AP-25211 (WebUI-Migration Logistic Regression Learner)